theme(fix): remove clipping from icon setup

--- a/assets/scss/03-theme/_navigation.scss
+++ b/assets/scss/03-theme/_navigation.scss
@@ -38,13 +38,13 @@
   .icon--bootstrap {
     margin-right: 0.25rem;
 
-    svg {
-      --size: 1.65cap;
+    // svg {
+    //   --size: 1.65cap;
 
-      flex: 0 0 var(--size);
-      width: var(--size);
-      height: var(--size);
-    }
+    //   flex: 0 0 var(--size);
+    //   width: var(--size);
+    //   height: var(--size);
+    // }
   }
 
 }
